[gd_scene load_steps=12 format=3 uid="uid://blju14eccfr53"]

[ext_resource type="Script" path="res://scripts/Game/ItemDisplay.gd" id="1_q5mcy"]
[ext_resource type="PackedScene" uid="uid://qt8yey64vkjj" path="res://utils/ToggleComponent/ToggleComponent.tscn" id="2_eikxv"]
[ext_resource type="Resource" uid="uid://c7abec4wn2hfv" path="res://tavern/tavern_inventory_resource.tres" id="2_wqxd7"]
[ext_resource type="PackedScene" uid="uid://brh82olvvw0w4" path="res://utils/PopUpGUIComponent/PopUpGUIComponent.tscn" id="3_yygff"]
[ext_resource type="PackedScene" uid="uid://1on721liy2cb" path="res://items/UIItem.tscn" id="4_b52ua"]
[ext_resource type="Script" path="res://scripts/helper/Actionable.gd" id="5_00r8b"]
[ext_resource type="PackedScene" uid="uid://73mvo4p2s0t5" path="res://counter/input_hint.tscn" id="7_3miev"]
[ext_resource type="Texture2D" uid="uid://4lqrfxt1uqa5" path="res://icons/X.png" id="8_dlsft"]
[ext_resource type="PackedScene" uid="uid://dg5nybf67hpca" path="res://tooltip/tooltip.tscn" id="9_vvl3i"]
[ext_resource type="Texture2D" uid="uid://bgxqho1p3kmav" path="res://art/sprites/shadow.png" id="10_sl1ty"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4sjws"]

[node name="ItemDisplay" type="Marker2D" groups=["item_display"]]
y_sort_enabled = true
script = ExtResource("1_q5mcy")
tavern_inventory_resource = ExtResource("2_wqxd7")

[node name="ItemSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 8)
offset = Vector2(2.08165e-12, -8)

[node name="ToggleComponent" parent="." instance=ExtResource("2_eikxv")]

[node name="PopUpGuiComponent" parent="." node_paths=PackedStringArray("content") instance=ExtResource("3_yygff")]
visible = false
light_mask = 0
z_index = 0
y_sort_enabled = true
offset_left = -70.0
offset_top = -70.0
offset_right = 0.0
offset_bottom = 0.0
content = NodePath("UIItem")
margin = 6

[node name="UIItem" parent="PopUpGuiComponent" instance=ExtResource("4_b52ua")]
light_mask = 0
y_sort_enabled = true
layout_mode = 1

[node name="Actionable" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 514
script = ExtResource("5_00r8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable"]
shape = SubResource("CircleShape2D_4sjws")

[node name="InputHint" parent="Actionable" instance=ExtResource("7_3miev")]
position = Vector2(-7, 4)
texture = ExtResource("8_dlsft")

[node name="Tooltip" parent="." instance=ExtResource("9_vvl3i")]
visible = false

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.0705882)
y_sort_enabled = true
position = Vector2(0, 7)
texture = ExtResource("10_sl1ty")
offset = Vector2(2.08165e-12, -7)

[connection signal="value_changed" from="ToggleComponent" to="PopUpGuiComponent" method="set_active"]
[connection signal="resource_changed" from="PopUpGuiComponent/UIItem" to="." method="_on_ui_item_resource_changed"]
[connection signal="action" from="Actionable" to="." method="_on_actionable_action"]
[connection signal="is_closest_to_player_changed" from="Actionable" to="." method="_on_actionable_is_closest_to_player_changed"]
